# LearningToSwig

./: .gitignore  readme.md
codebase/: CMakeLists.txt  codebase.cpp  codebase.h  codebase_wrapper.i
codebase-dotnet/: Program.cs  codebase-dotnet.csproj  codebase-dotnet.sln
